--- a/vue_sample/package.json
+++ b/vue_sample/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "animate.css": "^4.1.1",
+    "core-js": "^3.9.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
