--- a/vue_sample/package.json
+++ b/vue_sample/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "core-js": "^3.9.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
